<resources>
    <string name="app_name">辰序</string>
    
    <!-- Calendar Views -->
    <string name="month_view">月视图</string>
    <string name="week_view">周视图</string>
    <string name="day_view">日视图</string>
    
    <!-- Event Actions -->
    <string name="add_event">添加日程</string>
    <string name="edit_event">编辑日程</string>
    <string name="delete_event">删除日程</string>
    <string name="save_event">保存</string>
    <string name="cancel">取消</string>
    
    <!-- Event Details -->
    <string name="event_title">标题</string>
    <string name="event_description">描述</string>
    <string name="event_location">地点</string>
    <string name="event_start_time">开始时间</string>
    <string name="event_end_time">结束时间</string>
    <string name="event_reminder">提醒</string>
    <string name="event_all_day">全天</string>
    
    <!-- Reminders -->
    <string name="reminder_none">无提醒</string>
    <string name="reminder_at_time">准时</string>
    <string name="reminder_5_min">提前5分钟</string>
    <string name="reminder_15_min">提前15分钟</string>
    <string name="reminder_30_min">提前30分钟</string>
    <string name="reminder_1_hour">提前1小时</string>
    <string name="reminder_1_day">提前1天</string>
    
    <!-- Messages -->
    <string name="event_added">日程已添加</string>
    <string name="event_updated">日程已更新</string>
    <string name="event_deleted">日程已删除</string>
    <string name="confirm_delete">确认删除此日程吗？</string>
    
    <!-- Validation -->
    <string name="error_title_required">请输入标题</string>
    <string name="error_invalid_time">结束时间必须晚于开始时间</string>
</resources>